[package]
name = "waitx"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ejsch03/waitx"
authors = ["Evan Schwartzentruber <ejsch03@gmail.com>"]
description = "A lightweight & low-latency, pure signaling primitive."
keywords = ["wait", "signal", "wake", "sync", "notify"]
categories = ["concurrency"]
exclude = [".github/", ".gitignore", "LICENSE", "benches/", "docs/"]

[dependencies]
parking_lot = "0.12.5"

[dev-dependencies]
atomic-wait = "1.1.0"
criterion = "0.7.0"
crossbeam-channel = "0.5.15"
event-listener = "5.4.1"
flume = "0.11.1"
rand = "0.9.2"
spin = "0.10.0"

[[bench]]
name = "oneshot_ping_pong"
harness = false

[[bench]]
name = "unit_ping_pong"
harness = false

[profile.release]
lto = true
codegen-units = 1
overflow-checks = false
incremental = false
