[package]
name = "waitx"
version = "0.4.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/ejsch03/waitx"
authors = ["Evan Schwartzentruber <ejsch03@gmail.com>"]
description = "A lightweight & low-latency, pure signaling primitive."
keywords = ["wait", "signal", "wake", "sync", "notify"]
categories = ["concurrency"]
exclude = [".github/", ".gitignore", "LICENSE", "benches/", "docs/", "tests/"]

[features]
loom = ["dep:loom"]

[dependencies]
atomic-wait = "1.1.0"
loom = { version = "0.7.2", optional = true }
parking_lot = "0.12.5"

[dev-dependencies]
criterion = "0.7.0"
crossbeam-channel = "0.5.15"
event-listener = "5.4.1"
flume = "0.11.1"
oneshot = { version = "0.2.1", features = ["std"] }
rand = "0.9.2"
spin = "0.10.0"

[[bench]]
name = "oneshot_ping_pong"
harness = false

[[bench]]
name = "unit_ping_pong"
harness = false

[profile.release]
lto = true
codegen-units = 1
overflow-checks = false
incremental = false
