[package]
name = "waitx"
version = "0.4.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/ejsch03/waitx"
authors = ["Evan Schwartzentruber <ejsch03@gmail.com>"]
description = "Synchronous signaling & single-slot channel primitives."
keywords = ["concurrency", "channel", "synchronization", "blocking", "no-async"]
categories = ["concurrency"]
exclude = [".github/", ".gitignore", "LICENSE", "benches/", "docs/", "tests/"]

[features]
loom = ["dep:loom"]

[dependencies]
loom = { version = "0.7.2", optional = true }
parking_lot = "0.12.5"

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
libc = "0.2.183"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }

[dev-dependencies]
atomic-wait = "1.1.0"
criterion = "0.8.2"
crossbeam-channel = "0.5.15"
event-listener = "5.4.1"
flume = "0.12.0"
oneshot = { version = "0.2.1", features = ["std"] }
rand = "0.10.0"
spin = "0.10.0"

[[bench]]
name = "oneshot_ping_pong"
harness = false

[[bench]]
name = "unit_ping_pong"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = true
debug = false
incremental = false
